# stereo_reconstruction

./: CMakeLists.txt  README.md  eval.cpp  eval_2d2d.py  main.cpp
include/: defs.h  disparity.h  disparity_eval.h  io_disp.h  io_integer.h  io_util.h  pdist2.h  pose_eval.h  registration.h  triangulation_indirect.h  types.h
src/: disparity.cpp  registration.cpp  triangulation_indirect.cpp
